# aoc_cpp

./: .gitignore  CMakeLists.txt  CMakePresets.json  d02.cpp  d03.cpp  d04.cpp  d05.cpp  d06.cpp  d07.cpp  d08.cpp  d09.cpp  d10.cpp  d11.cpp  d12.cpp  d14.cpp  d16.cpp  d17.cpp  d19.cpp  d21.cpp  d24.cpp  device.cpp  device.hpp
2018/: CMakeLists.txt  d02.cpp  d08.cpp  d10.cpp  d12.cpp  d13.cpp  d15.cpp  d18.cpp  d20.cpp  d22.cpp  d23.cpp  d25.cpp
2025/: CMakeLists.txt  d01.cpp  d02.cpp  d03.cpp  d04.cpp  d05.cpp  d06.cpp  d07.cpp  d08.cpp  d09.cpp  d10.cpp  d11.cpp  d12.cpp
aoc_lib/: CMakeLists.txt  aoc_lib.natvis
aoc_lib/public/aoc_lib/: algorithm.hpp  day_trait.hpp  geometry.hpp  geometry_format.hpp  hash.hpp  input.hpp  overload.hpp  regex.hpp  string.hpp
aoc_lib/public/aoc_lib/geometry/: algorithm.hpp  dimensions.hpp  dyn_matrix.hpp  dyn_matrix_format.hpp  fixed_matrix.hpp  fixed_matrix_format.hpp  point.hpp  point_format.hpp  scalar.hpp  vector.hpp
aoc_lib/src/: hash.cpp  input.cpp  regex.cpp  string.cpp
aoc_main/: CMakeLists.txt
aoc_main/public/aoc_main/: main.hpp
aoc_main/src/: main.cpp
cmake/: AocDay.cmake  Dependencies.cmake
cmake/scripts/: CopyIfExists.cmake
d01/: CMakeLists.txt  d01.cpp
